ros2_packages_ws/log/build_2024-06-04_07-11-09/localization/stderr.log
  File "/home/puzzlebot/Puzzlebot_Lidar_ROS1_ROS2/ros2_packages_ws/install/localization/lib/python3.8/site-packages/localization/kalman_filter.py", line 134
    print("linear transpose: ", self.linearise_observation_model.)
                                                                 ^
SyntaxError: invalid syntax

